<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.getdefault.assessmentapp.login_module.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:padding="30dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_default_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansation_bold"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="#232323"
            android:textSize="@dimen/heading_font_size"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_email_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansation_regular"
            android:text="@string/enter_email_message"
            android:textAlignment="center"
            android:textColor="#726A6A"
            android:textSize="@dimen/normal_font_size"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_msg"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:autofillHints="@string/email_autofill_hint"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/sansation_regular"
            android:hint="@string/email_hint_message"
            android:inputType="textEmailAddress"
            android:padding="@dimen/normal_padding"
            android:textSize="@dimen/normal_font_size"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_msg" />


        <TextView
            android:id="@+id/tv_authentication_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansation_regular"
            android:text="@string/email_error_msg"
            android:textColor="#FA0404"
            android:textSize="@dimen/normal_font_size"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:fontFamily="@font/sansation_bold"
            android:text="@string/login_button_string"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>