<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="finishFragment"
            type="com.getdefault.assessmentapp.finish_module.FinishFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:padding="30dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_default_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sansation_bold"
            android:text="@string/quiz_completed_msg"
            android:textAlignment="center"
            android:textColor="#232323"
            android:textSize="@dimen/heading_font_size"
            app:layout_constraintBottom_toTopOf="@+id/tv_thank_you_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_thank_you_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansation_regular"
            android:text="@string/quiz_completed_thank_msg"
            android:textAlignment="center"
            android:textColor="#726A6A"
            android:textSize="@dimen/normal_font_size"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_msg" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.70" />

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:fontFamily="@font/sansation_bold"
            android:text="@string/log_out_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>